--- a/package.json
+++ b/package.json
@@ -232,6 +232,8 @@
     "react-router-scroll": "0.4.1",
     "redux": "3.6.0",
     "redux-immutable": "3.0.8",
+    "redux-persist": "^4.7.1",
+    "redux-persist-immutable": "^4.2.0",
     "redux-saga": "0.14.0",
     "reselect": "2.5.4",
     "sanitize.css": "4.1.0",
