--- a/package.json
+++ b/package.json
@@ -211,6 +211,7 @@
   },
   "dependencies": {
     "babel-polyfill": "6.20.0",
+    "bootstrap": "^3.3.7",
     "chalk": "1.1.3",
     "compression": "1.6.2",
     "cross-env": "3.1.3",
