--- a/package.json
+++ b/package.json
@@ -226,12 +226,14 @@
     "react": "15.4.1",
     "react-dom": "15.4.1",
     "react-helmet": "3.2.2",
+    "react-inlinesvg": "^0.6.0",
     "react-intl": "2.1.5",
     "react-modal": "^1.7.7",
     "react-redux": "4.4.6",
     "react-router": "3.0.0",
     "react-router-redux": "4.0.6",
     "react-router-scroll": "0.4.1",
+    "react-svg-loader": "^1.1.1",
     "react-visibility-sensor": "^3.9.0",
     "redux": "3.6.0",
     "redux-immutable": "3.0.8",
