--- a/package.json
+++ b/package.json
@@ -230,6 +230,7 @@
     "react-intl": "2.1.5",
     "react-modal": "^1.7.7",
     "react-redux": "4.4.6",
+    "react-remarkable": "^1.1.1",
     "react-router": "3.0.0",
     "react-router-redux": "4.0.6",
     "react-router-scroll": "0.4.1",
