--- a/package.json
+++ b/package.json
@@ -235,7 +235,9 @@
     "react-router-redux": "4.0.6",
     "react-router-scroll": "0.4.1",
     "react-svg-loader": "^1.1.1",
+    "react-timestamp": "^4.2.1",
     "react-visibility-sensor": "^3.9.0",
+    "react-websocket": "^1.1.7",
     "redux": "3.6.0",
     "redux-immutable": "3.0.8",
     "redux-persist": "^4.7.1",
