--- a/package.json
+++ b/package.json
@@ -229,6 +229,7 @@
     "react-helmet": "3.2.2",
     "react-inlinesvg": "^0.6.0",
     "react-intl": "2.1.5",
+    "react-markdown": "^2.5.0",
     "react-modal": "^1.7.7",
     "react-redux": "4.4.6",
     "react-remarkable": "^1.1.1",
