--- a/package.json
+++ b/package.json
@@ -225,6 +225,7 @@
     "minimist": "1.2.0",
     "react": "15.4.1",
     "react-dom": "15.4.1",
+    "react-ga": "^2.2.0",
     "react-google-invisible-recaptcha": "^0.1.1",
     "react-helmet": "3.2.2",
     "react-inlinesvg": "^0.6.0",
