--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Beautiful Rising",
+  "name": "beautiful-rising",
   "version": "3.1.0",
   "description": "Beautiful Rising harnesses the insights of changemakers worldwide to help make our movements more strategic, creative and effective.",
   "repository": {
