--- a/package.json
+++ b/package.json
@@ -217,6 +217,7 @@
     "cross-env": "3.1.3",
     "express": "4.14.0",
     "fontfaceobserver": "2.0.7",
+    "github-webhook": "^1.1.3",
     "immutable": "3.8.1",
     "intl": "1.2.5",
     "invariant": "2.2.2",
