--- a/package.json
+++ b/package.json
@@ -211,7 +211,7 @@
   },
   "dependencies": {
     "babel-polyfill": "6.20.0",
-    "bootstrap": "^3.3.7",
+    "bootstrap": "^3.4.1",
     "chalk": "1.1.3",
     "compression": "1.6.2",
     "cross-env": "3.1.3",
@@ -225,26 +225,26 @@
     "minimist": "1.2.0",
     "react": "15.4.1",
     "react-dom": "15.4.1",
-    "react-ga": "^2.2.0",
+    "react-ga": "^2.6.0",
     "react-google-invisible-recaptcha": "^0.1.1",
     "react-helmet": "3.2.2",
-    "react-inlinesvg": "^0.6.0",
+    "react-inlinesvg": "^0.6.2",
     "react-intl": "2.1.5",
-    "react-markdown": "^2.5.0",
-    "react-modal": "^1.7.7",
+    "react-markdown": "3.0.0",
+    "react-modal": "^1.9.7",
     "react-redux": "4.4.6",
-    "react-remarkable": "^1.1.1",
+    "react-remarkable": "^1.1.3",
     "react-router": "3.0.0",
     "react-router-redux": "4.0.6",
     "react-router-scroll": "0.4.1",
     "react-svg-loader": "^1.1.1",
-    "react-timestamp": "^4.2.1",
-    "react-visibility-sensor": "^3.9.0",
-    "react-websocket": "^1.1.7",
+    "react-timestamp": "^4.4.0",
+    "react-visibility-sensor": "^3.14.0",
+    "react-websocket": "^1.2.0",
     "redux": "3.6.0",
     "redux-immutable": "3.0.8",
-    "redux-persist": "^4.7.1",
-    "redux-persist-immutable": "^4.2.0",
+    "redux-persist": "^4.10.2",
+    "redux-persist-immutable": "^4.3.1",
     "redux-saga": "0.14.0",
     "reselect": "2.5.4",
     "sanitize.css": "4.1.0",
