--- a/package.json
+++ b/package.json
@@ -213,9 +213,9 @@
     "babel-polyfill": "6.20.0",
     "bootstrap": "^3.4.1",
     "chalk": "1.1.3",
-    "compression": "1.6.2",
+    "compression": "^1.7.4",
     "cross-env": "3.1.3",
-    "express": "4.14.0",
+    "express": "^4.17.1",
     "fontfaceobserver": "2.0.7",
     "github-webhook": "^1.1.3",
     "immutable": "3.8.1",
@@ -286,7 +286,7 @@
     "file-loader": "0.9.0",
     "html-loader": "0.4.4",
     "html-webpack-plugin": "2.24.1",
-    "image-webpack-loader": "2.0.0",
+    "image-webpack-loader": "3.0.0",
     "imports-loader": "0.6.5",
     "jest-cli": "18.0.0",
     "lint-staged": "3.2.1",
