--- a/package.json
+++ b/package.json
@@ -217,12 +217,12 @@
     "cross-env": "3.1.3",
     "express": "^4.17.1",
     "fontfaceobserver": "2.0.7",
-    "github-webhook": "^1.1.3",
     "immutable": "3.8.1",
     "intl": "1.2.5",
     "invariant": "2.2.2",
     "ip": "1.1.4",
     "minimist": "1.2.0",
+    "net": "^1.0.2",
     "react": "15.4.1",
     "react-dom": "15.4.1",
     "react-ga": "^2.6.0",
