--- a/package.json
+++ b/package.json
@@ -237,7 +237,7 @@
     "react-router": "3.0.0",
     "react-router-redux": "4.0.6",
     "react-router-scroll": "0.4.1",
-    "react-svg-loader": "^1.1.1",
+    "react-svg-loader": "^3.0.3",
     "react-timestamp": "^4.4.0",
     "react-visibility-sensor": "^3.14.0",
     "react-websocket": "^1.2.0",
@@ -270,8 +270,8 @@
     "babel-preset-stage-0": "6.16.0",
     "cheerio": "0.22.0",
     "circular-dependency-plugin": "2.0.0",
-    "coveralls": "2.11.15",
-    "css-loader": "0.26.1",
+    "coveralls": "^3.0.5",
+    "css-loader": "^3.1.0",
     "enzyme": "2.6.0",
     "eslint": "3.11.1",
     "eslint-config-airbnb": "13.0.0",
@@ -286,14 +286,14 @@
     "file-loader": "0.9.0",
     "html-loader": "0.4.4",
     "html-webpack-plugin": "2.24.1",
-    "image-webpack-loader": "3.0.0",
+    "image-webpack-loader": "^5.0.0",
     "imports-loader": "0.6.5",
-    "jest-cli": "18.0.0",
+    "jest-cli": "^24.8.0",
     "lint-staged": "3.2.1",
     "ngrok": "2.2.4",
     "node-plop": "0.5.4",
     "null-loader": "0.1.1",
-    "offline-plugin": "4.5.2",
+    "offline-plugin": "^5.0.7",
     "plop": "1.7.3",
     "pre-commit": "1.1.3",
     "react-addons-test-utils": "15.4.1",
@@ -301,7 +301,7 @@
     "shelljs": "0.7.5",
     "sinon": "2.0.0-pre",
     "style-loader": "0.13.1",
-    "url-loader": "0.5.7",
+    "url-loader": "^2.1.0",
     "webpack": "2.2.0-rc.3",
     "webpack-dev-middleware": "1.9.0",
     "webpack-hot-middleware": "2.15.0"
